Embed static files

--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>scalemate</title>
+    <link rel="stylesheet" href="/static/bulma.min.css">
 </head>
 <body>
-This is not the page you are looking for ...
+<section class="section">
+    <div class="container is-max-desktop content">
+        <h1>scalemate</h1>
+        <div class="mt-5">
+            <img src="/scale" alt="a guitar scale">
+        </div>
+    </div>
+</section>
 </body>
 </html>
