Return scale image base64 encoded in a JSON envelope
When introducing chords, the response of the "scale" endpoint can not
only be a picture, but must contain additional data (like the names of
the chords in the scale). To prepare for this, refactor towards a simple
JSON API and display the scale picture using a data URL.

--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -6,7 +6,7 @@
     <title>scalemate</title>
     <link rel="stylesheet" href="/static/bulma.min.css">
 </head>
-<body>
+<body onload="updateImageSRC()">
 <section class="section">
     <div class="container is-max-desktop content">
         <h1 class="has-text-primary">scalemate</h1>
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div>
-            <img id="scale-image" src="/scale" alt="a guitar scale">
+            <img id="scale-image" src="" alt="a guitar scale">
         </div>
     </div>
 </section>
