--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -13,6 +13,27 @@
         <div class="mt-5">
             <div class="field is-horizontal">
                 <div class="field-label is-normal has-text-left">
+                    <label class="label" for="tuning">Tuning:</label>
+                </div>
+                <div class="field-body">
+                    <div class="field">
+                        <div class="control">
+                            <div class="select">
+                                <select id="tuning" onchange="updateImageSRC()">
+                                    <option value="E A D G B E">Standard</option>
+                                    <option value="D# G# C# F# A# D#">Half step down</option>
+                                    <option value="D G C F A D">Full step down</option>
+                                    <option value="D A D G B E">Drop D</option>
+                                    <option value="C# G# C# F# A# D#">Drop C#</option>
+                                    <option value="C G C F A D">Drop C</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="field is-horizontal">
+                <div class="field-label is-normal has-text-left">
                     <label class="label" for="root">Root:</label>
                 </div>
                 <div class="field-body">
@@ -57,19 +78,14 @@
             </div>
             <div class="field is-horizontal">
                 <div class="field-label is-normal has-text-left">
-                    <label class="label" for="tuning">Tuning:</label>
+                    <label class="label" for="chord">Chord:</label>
                 </div>
                 <div class="field-body">
                     <div class="field">
                         <div class="control">
                             <div class="select">
-                                <select id="tuning" onchange="updateImageSRC()">
-                                    <option value="E A D G B E">Standard</option>
-                                    <option value="D# G# C# F# A# D#">Half step down</option>
-                                    <option value="D G C F A D">Full step down</option>
-                                    <option value="D A D G B E">Drop D</option>
-                                    <option value="C# G# C# F# A# D#">Drop C#</option>
-                                    <option value="C G C F A D">Drop C</option>
+                                <select id="chord" onchange="updateImageSRC()">
+                                    <option value="">-</option>
                                 </select>
                             </div>
                         </div>
