--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -6,7 +6,7 @@
     <title>scalemate</title>
     <link rel="stylesheet" href="/static/bulma.min.css">
 </head>
-<body onload="updateImageSRC()">
+<body onload="sendScaleRequest(true)">
 <section class="section">
     <div class="container is-max-desktop content">
         <h1 class="has-text-primary">scalemate</h1>
@@ -19,7 +19,7 @@
                     <div class="field">
                         <div class="control">
                             <div class="select">
-                                <select id="tuning" onchange="updateImageSRC()">
+                                <select id="tuning" onchange="sendScaleRequest(true)">
                                     <option value="E A D G B E">Standard</option>
                                     <option value="D# G# C# F# A# D#">Half step down</option>
                                     <option value="D G C F A D">Full step down</option>
@@ -40,7 +40,7 @@
                     <div class="field">
                         <div class="control">
                             <div class="select">
-                                <select id="root" onchange="updateImageSRC()">
+                                <select id="root" onchange="sendScaleRequest(true)">
                                     <option value="A">A</option>
                                     <option value="A#">A#</option>
                                     <option value="B">B</option>
@@ -67,7 +67,7 @@
                     <div class="field">
                         <div class="control">
                             <div class="select">
-                                <select id="scale" onchange="updateImageSRC()">
+                                <select id="scale" onchange="sendScaleRequest(true)">
                                     <option value="minor">minor</option>
                                     <option value="major">major</option>
                                 </select>
@@ -84,7 +84,7 @@
                     <div class="field">
                         <div class="control">
                             <div class="select">
-                                <select id="chord" onchange="updateImageSRC()">
+                                <select id="chord" onchange="sendScaleRequest(false)">
                                     <option value="">-</option>
                                 </select>
                             </div>
