Slightly restructure template

--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="field is-horizontal">
                 <div class="field-label is-normal has-text-left">
-                    <label class="label" for="root">Root:</label>
+                    <label class="label" for="root">Scale:</label>
                 </div>
                 <div class="field-body">
                     <div class="field">
@@ -55,17 +55,6 @@
                                     <option value="G#">G#</option>
                                 </select>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="field is-horizontal">
-                <div class="field-label is-normal has-text-left">
-                    <label class="label" for="scale">Scale:</label>
-                </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
                             <div class="select">
                                 <select id="scale" onchange="sendScaleRequest(true)">
                                     <option value="minor">minor</option>
