--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>scalemate</title>
     <link rel="stylesheet" href="/static/bulma.min.css">
+    <link rel="icon" type="image/png" href="/static/favicon.png">
 </head>
 <body onload="sendScaleRequest(true)">
 <section class="section">
