--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -6,108 +6,132 @@
     <title>scalemate</title>
     <link rel="stylesheet" href="/static/bulma.min.css">
     <link rel="icon" type="image/png" href="/static/favicon.png">
+    <style>
+        body {
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+        }
+
+        #wrapper {
+            flex: 1;
+        }
+
+        .footer {
+            padding: 1em 0.5rem 1rem;
+        }
+    </style>
 </head>
 <body onload="sendScaleRequest(true)">
-<section class="section">
-    <div class="container is-max-desktop content">
-        <h1 class="has-text-primary">scalemate</h1>
-        <div class="mt-5">
-            <div class="field is-horizontal">
-                <div class="field-label is-normal has-text-left">
-                    <label class="label" for="tuning">Tuning:</label>
-                </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
-                            <div class="select">
-                                <select id="tuning" onchange="sendScaleRequest(true)">
-                                    <option value="E A D G B E">Standard</option>
-                                    <option value="D# G# C# F# A# D#">Half step down</option>
-                                    <option value="D G C F A D">Full step down</option>
-                                    <option value="D A D G B E">Drop D</option>
-                                    <option value="C# G# C# F# A# D#">Drop C#</option>
-                                    <option value="C G C F A D">Drop C</option>
-                                </select>
+    <div id="wrapper">
+        <section class="section">
+            <div class="container is-max-desktop content">
+                <h1 class="has-text-primary">scalemate</h1>
+                <div class="mt-5">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal has-text-left">
+                            <label class="label" for="tuning">Tuning:</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                                <div class="control">
+                                    <div class="select">
+                                        <select id="tuning" onchange="sendScaleRequest(true)">
+                                            <option value="E A D G B E">Standard</option>
+                                            <option value="D# G# C# F# A# D#">Half step down</option>
+                                            <option value="D G C F A D">Full step down</option>
+                                            <option value="D A D G B E">Drop D</option>
+                                            <option value="C# G# C# F# A# D#">Drop C#</option>
+                                            <option value="C G C F A D">Drop C</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal has-text-left">
+                            <label class="label" for="frets">Frets:</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                                <div class="control">
+                                    <div class="select">
+                                        <select id="frets" onchange="sendScaleRequest(false)">
+                                            <option value="12">12</option>
+                                            <option value="15" selected>15</option>
+                                            <option value="22">22</option>
+                                        </select>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="field is-horizontal">
-                <div class="field-label is-normal has-text-left">
-                    <label class="label" for="frets">Frets:</label>
-                </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
-                            <div class="select">
-                                <select id="frets" onchange="sendScaleRequest(false)">
-                                    <option value="12">12</option>
-                                    <option value="15" selected>15</option>
-                                    <option value="22">22</option>
-                                </select>
+                <div class="mt-5">
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal has-text-left">
+                            <label class="label" for="root">Scale:</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                                <div class="control">
+                                    <div class="select">
+                                        <select id="root" onchange="sendScaleRequest(true)">
+                                            <option value="A">A</option>
+                                            <option value="A#">A#</option>
+                                            <option value="B">B</option>
+                                            <option value="C">C</option>
+                                            <option value="C#">C#</option>
+                                            <option value="D">D</option>
+                                            <option value="D#">D#</option>
+                                            <option value="E">E</option>
+                                            <option value="F">F</option>
+                                            <option value="F#">F#</option>
+                                            <option value="G">G</option>
+                                            <option value="G#">G#</option>
+                                        </select>
+                                    </div>
+                                    <div class="select">
+                                        <select id="scale" onchange="sendScaleRequest(true)">
+                                            <option value="minor">minor</option>
+                                            <option value="major">major</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal has-text-left">
+                            <label class="label" for="chord">Chord:</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                                <div class="control">
+                                    <div class="select">
+                                        <select id="chord" onchange="sendScaleRequest(false)">
+                                            <option value="">-</option>
+                                        </select>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="mt-5">
-            <div class="field is-horizontal">
-                <div class="field-label is-normal has-text-left">
-                    <label class="label" for="root">Scale:</label>
-                </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
-                            <div class="select">
-                                <select id="root" onchange="sendScaleRequest(true)">
-                                    <option value="A">A</option>
-                                    <option value="A#">A#</option>
-                                    <option value="B">B</option>
-                                    <option value="C">C</option>
-                                    <option value="C#">C#</option>
-                                    <option value="D">D</option>
-                                    <option value="D#">D#</option>
-                                    <option value="E">E</option>
-                                    <option value="F">F</option>
-                                    <option value="F#">F#</option>
-                                    <option value="G">G</option>
-                                    <option value="G#">G#</option>
-                                </select>
-                            </div>
-                            <div class="select">
-                                <select id="scale" onchange="sendScaleRequest(true)">
-                                    <option value="minor">minor</option>
-                                    <option value="major">major</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
+                <div>
+                    <img id="scale-image" src="" alt="a guitar scale">
                 </div>
             </div>
-            <div class="field is-horizontal">
-                <div class="field-label is-normal has-text-left">
-                    <label class="label" for="chord">Chord:</label>
-                </div>
-                <div class="field-body">
-                    <div class="field">
-                        <div class="control">
-                            <div class="select">
-                                <select id="chord" onchange="sendScaleRequest(false)">
-                                    <option value="">-</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div>
-            <img id="scale-image" src="" alt="a guitar scale">
-        </div>
+        </section>
+        <script src="/static/app.js"></script>
     </div>
-</section>
-<script src="/static/app.js"></script>
+    <footer class="footer is-small">
+        <div class="content has-text-centered is-small">
+            <p>
+                <a href="https://github.com/chrismeh/scalemate" target="_blank">view source at github</a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
