Add TextDisplayMode for displaying intervals relative to the chord root

--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -39,6 +39,7 @@
                                         <select id="display-mode" onchange="sendScaleRequest(false)">
                                             <option value="0">Notes</option>
                                             <option value="1">Intervals, relative to scale root</option>
+                                            <option value="2">Intervals, relative to chord root</option>
                                         </select>
                                     </div>
                                 </div>
