Add F A C G C E tuning to the web UI

--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -61,6 +61,7 @@
                                             <option value="D A D G B E">Drop D</option>
                                             <option value="C# G# C# F# A# D#">Drop C#</option>
                                             <option value="C G C F A D">Drop C</option>
+                                            <option value="F A C G C E">Open Fmaj9 | F A C G C E</option>
                                         </select>
                                     </div>
                                 </div>
